<resources>
    <string name="app_name">CardGame</string>
    <string name="number_of_decks">Number of decks:</string>
    <string name="start_game">Start Game</string>
    <string name="draw_cards">Draw Cards</string>
    <string name="card_count">Card Left:</string>
    <string name="shuffle">Shuffle Deck</string>
    <string name="load_game">Load Game</string>
    <string name="you_win">YOU WIN</string>
    <string name="no_cards_left">No cards left</string>
</resources>
