<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_gravity="center"
android:background="@color/colorPrimary"
>

    <Button
            android:text="@string/start_game"
            android:background="@drawable/round_button"
            android:padding="@dimen/button_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_game" app:layout_constraintStart_toStartOf="@+id/deck_count" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/deck_count" app:layout_constraintEnd_toEndOf="@+id/deck_count"
    />
    <SeekBar
            android:max="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:padding="@dimen/button_margins"
            android:layout_margin="@dimen/button_margins"
            android:id="@+id/deck_count" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_deck_count"/>
    <TextView
            android:text="@string/number_of_decks"
            android:padding="@dimen/button_margins"
            android:layout_margin="@dimen/button_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:id="@+id/text_deck_count" app:layout_constraintStart_toStartOf="@+id/deck_count"
            app:layout_constraintEnd_toEndOf="@+id/deck_count"
            app:layout_constraintHorizontal_bias="0.467"
            android:gravity="center" android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/load_game"
            android:background="@drawable/round_button"
            android:padding="@dimen/button_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_load_game" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_start_game"
            app:layout_constraintStart_toStartOf="@+id/button_start_game"
            app:layout_constraintEnd_toEndOf="@+id/button_start_game"/>
</androidx.constraintlayout.widget.ConstraintLayout>