<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"

              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/colorPrimary"
              android:layout_height="match_parent"
              android:weightSum="1.0"
              android:layout_gravity="center">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout"
            android:weightSum="4"
            android:gravity="center"
            android:layout_weight="0.5">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/magic_card"
                android:id="@+id/imageView"
                android:background="@drawable/round_background"
                android:layout_weight="3"/>

            <Button
                    android:padding="@dimen/button_margins"
                    android:background="@drawable/round_button"
                    android:text="@string/shuffle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button_shuffle"
                    android:layout_weight="1"
            android:layout_margin="@dimen/button_margins"/>


    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:visibility="visible"
              android:text="@string/you_win"
              android:layout_gravity="center"
              android:gravity="center"
              style="@style/TextAppearance.AppCompat.Large"
              android:id="@+id/text_win_lose"
              android:layout_weight="0.1"/>
    <androidx.recyclerview.widget.RecyclerView
            android:background="@drawable/round_background"
            android:padding="@dimen/button_margins"
            android:layout_margin="@dimen/button_margins"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.435"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/card_item"
            tools:itemCount="5"
            android:id="@+id/card_container"
            android:layout_gravity="center"
    />

    <Button
            android:padding="@dimen/button_margins"
            android:background="@drawable/round_button"
            android:layout_weight="0.2"
            android:text="@string/draw_cards"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/button_draw"
            android:layout_gravity="center"

    android:layout_margin="@dimen/button_margins"/>
</LinearLayout>